# GPS_tracker

./: CMakeLists.txt  geo_utils.cpp  geo_utils.h  main.cpp  metric_calculators.cpp  metric_calculators.h  reporter.cpp  reporter.h  time_utils.cpp  time_utils.h  track_analyzer.cpp  track_analyzer.h  track_data_provider.cpp  track_data_provider.h
